--- a/src/App/style.css
+++ b/src/App/style.css
@@ -1,17 +1,18 @@
-.container {
-    width: 100vw;
+ .container {
     height: 100vh;
-    backdrop-filter: brightness(30%);
-    color: white;
-    overflow-y: auto;
     display: grid;
     place-items: center;
-
-    background-image: no-repeat;
-    background-position: center;
-    background-size: cover;
-    -webkit-backdrop-filter: brightness(30%);
+    overflow: auto;
 }
+
+::-webkit-scrollbar {
+    display: none;
+    background: rgba(0, 0, 0, 0.207);
+}
+
+::-webkit-scrollbar-thumb {
+    background: #1869b4;
+} 
 
 h1 {
     text-align: center;
@@ -28,7 +29,8 @@ form {
     padding: 0 3.2rem;
 }
 
-.srOnly {
+/* Somente para o navegador ler */
+.srOnly { 
     position: absolute;
     width: .1rem;
     height: .1rem;
@@ -135,7 +137,7 @@ main {
 .containerWeatherForecast ol {
     display: flex; 
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     
     list-style: none;
@@ -147,11 +149,11 @@ footer {
 }
 
 @media (max-width:365px) {
-    main {
-        padding: 1.6rem 2.2rem;
-    }
-
     form {
         padding: 0 2.2rem;
+    }
+
+    main {
+        padding: 1.6rem 2.2rem;
     }
 }
