--- a/src/index.css
+++ b/src/index.css
@@ -11,14 +11,18 @@
 }
 
 body {
-    display: grid;
-    place-items: center;
+    /* display: grid;
+    place-items: center; */
+    width: 100%;
+    height: 100vh;
     color: white;
 
     background: url("../src/images/weather-rain.jpg");
     background-image: no-repeat;
     background-position: center;
     background-size: cover;
+    backdrop-filter: brightness(30%);
+    -webkit-backdrop-filter: brightness(30%);
 }
 
 body, input, button {
